--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "husky": "^4.2.3",
     "lockfile-lint": "^4.1.0",
     "mocha": "^7.1.0",
+    "mock-fs": "^4.11.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.0.0",
     "remark-cli": "^7.0.1",
