--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@form8ion/eslint-config-mocha": "1.2.8",
     "@form8ion/remark-lint-preset": "1.0.6",
     "@travi/any": "2.0.8",
+    "@travi/travis-lint": "1.0.1",
     "ban-sensitive-files": "1.9.7",
     "chai": "4.2.0",
     "codecov": "3.7.0",
@@ -60,8 +61,7 @@
     "rimraf": "3.0.2",
     "rollup": "2.10.3",
     "rollup-plugin-auto-external": "2.0.0",
-    "sinon": "9.0.2",
-    "travis-lint": "1.0.0"
+    "sinon": "9.0.2"
   },
   "dependencies": {
     "@travi/cli-messages": "^1.0.2"
