--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -43,7 +43,7 @@ jobs:
           node-version: '${{ steps.nvm.outputs.NVMRC }}'
       - uses: bahmutov/npm-install@v1
       - name: semantic-release
-        uses: npx semantic-release
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           NPM_TOKEN: '${{ secrets.NPM_PUBLISH_TOKEN }}'
