--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@form8ion/eslint-config": "1.7.3",
     "@form8ion/eslint-config-mocha": "1.2.9",
     "@form8ion/remark-lint-preset": "1.0.11",
+    "@rollup/plugin-node-resolve": "11.0.1",
     "@travi/any": "2.0.15",
     "ban-sensitive-files": "1.9.14",
     "chai": "4.2.0",
