--- a/package.json
+++ b/package.json
@@ -3,24 +3,18 @@
   "description": "opinionated scaffolder for enabling Renovate on a project",
   "license": "MIT",
   "version": "0.0.0-semantically-released",
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.es.js",
-  "sideEffects": false,
-  "files": [
-    "lib/"
-  ],
-  "publishConfig": {
-    "access": "public"
-  },
+  "author": "Matt Travi <npm@travi.org> (https://matt.travi.org/)",
   "repository": "form8ion/renovate-scaffolder",
   "bugs": "https://github.com/form8ion/renovate-scaffolder/issues",
   "homepage": "https://npm.im/@form8ion/renovate-scaffolder",
-  "author": "Matt Travi <npm@travi.org> (https://matt.travi.org/)",
+  "main": "lib/index.cjs.js",
+  "module": "lib/index.es.js",
+  "sideEffects": false,
   "scripts": {
     "test": "npm-run-all --print-label build --parallel lint:* --parallel test:*",
     "lint:lockfile": "lockfile-lint --path package-lock.json --type npm --validate-https --allowed-hosts npm",
     "lint:js": "eslint . --cache",
-    "pregenerate:md": "npm run build",
+    "pregenerate:md": "run-s build",
     "lint:md": "remark . --frail",
     "generate:md": "remark . --output",
     "lint:sensitive": "ban",
@@ -30,11 +24,21 @@
     "build:js": "rollup --config",
     "watch": "run-s 'build:js -- --watch'",
     "prepack": "run-s build",
-    "test:unit": "nyc run-s test:unit:base",
-    "coverage:report": "nyc report --reporter=text-lcov > coverage.lcov && codecov",
+    "test:unit": "cross-env NODE_ENV=test c8 run-s test:unit:base",
     "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
     "lint:peer": "npm ls >/dev/null",
     "prepare": "husky install"
+  },
+  "files": [
+    "lib/"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "dependencies": {
+    "@form8ion/config-file": "^1.0.1",
+    "@form8ion/core": "^2.0.0",
+    "@travi/cli-messages": "^1.0.2"
   },
   "devDependencies": {
     "@babel/register": "7.18.9",
@@ -46,15 +50,15 @@
     "@rollup/plugin-node-resolve": "15.0.1",
     "@travi/any": "2.1.6",
     "ban-sensitive-files": "1.9.18",
+    "c8": "7.12.0",
     "chai": "4.3.7",
-    "codecov": "3.8.3",
+    "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
     "husky": "8.0.2",
     "lockfile-lint": "4.9.6",
     "mocha": "10.1.0",
     "mock-fs": "5.2.0",
     "npm-run-all": "4.1.5",
-    "nyc": "15.1.0",
     "remark-cli": "11.0.0",
     "remark-toc": "8.0.1",
     "remark-usage": "10.0.1",
@@ -62,10 +66,5 @@
     "rollup": "3.2.5",
     "rollup-plugin-auto-external": "2.0.0",
     "sinon": "14.0.2"
-  },
-  "dependencies": {
-    "@form8ion/config-file": "^1.0.1",
-    "@form8ion/core": "^2.0.0",
-    "@travi/cli-messages": "^1.0.2"
   }
 }
