--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "lib/"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "dependencies": {
     "@form8ion/config-file": "^1.0.1",
