--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "watch": "run-s 'build:js -- --watch'",
     "prepack": "run-s build",
     "test:unit": "cross-env NODE_ENV=test c8 run-s test:unit:base",
-    "test:unit:base": "DEBUG=any mocha 'src/**/*-test.js'",
+    "test:unit:base": "DEBUG=any vitest run",
     "lint:peer": "npm ls >/dev/null",
     "prepare": "husky install",
     "lint:publish": "publint"
@@ -47,18 +47,16 @@
     "@form8ion/babel-preset": "1.6.109",
     "@form8ion/commitlint-config": "1.0.55",
     "@form8ion/eslint-config": "6.0.3",
-    "@form8ion/eslint-config-mocha": "3.0.0",
     "@form8ion/remark-lint-preset": "6.0.0",
     "@rollup/plugin-node-resolve": "15.2.1",
     "@travi/any": "2.1.8",
     "ban-sensitive-files": "1.10.0",
     "c8": "8.0.1",
-    "chai": "4.3.8",
     "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
     "husky": "8.0.3",
+    "jest-when": "3.6.0",
     "lockfile-lint": "4.12.0",
-    "mocha": "10.2.0",
     "mock-fs": "5.2.0",
     "npm-run-all2": "6.0.6",
     "publint": "0.2.2",
@@ -68,6 +66,6 @@
     "rimraf": "5.0.1",
     "rollup": "3.28.1",
     "rollup-plugin-auto-external": "2.0.0",
-    "sinon": "15.2.0"
+    "vitest": "0.34.3"
   }
 }
