--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "description": "opinionated scaffolder for enabling Renovate on a project",
   "license": "MIT",
   "version": "0.0.0-semantically-released",
+  "type": "module",
   "author": "Matt Travi <npm@travi.org> (https://matt.travi.org/)",
   "repository": "form8ion/renovate-scaffolder",
   "bugs": "https://github.com/form8ion/renovate-scaffolder/issues",
   "homepage": "https://npm.im/@form8ion/renovate-scaffolder",
-  "main": "lib/index.cjs.js",
-  "module": "lib/index.es.js",
+  "main": "./lib/index.js",
+  "exports": "./lib/index.js",
   "sideEffects": false,
   "scripts": {
     "test": "npm-run-all --print-label build --parallel lint:* --parallel test:*",
@@ -44,8 +45,6 @@
     "deepmerge": "^4.3.1"
   },
   "devDependencies": {
-    "@babel/register": "7.22.5",
-    "@form8ion/babel-preset": "1.6.109",
     "@form8ion/commitlint-config": "1.0.55",
     "@form8ion/eslint-config": "6.0.3",
     "@form8ion/remark-lint-preset": "6.0.0",
