--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -13,6 +13,24 @@ env:
   FORCE_COLOR: 1
   NPM_CONFIG_COLOR: always
 jobs:
+  verify-matrix:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node:
+          - 16.14.0
+          - 18.0.0
+          - 18
+          - 20
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup node
+        uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: ${{ matrix.node }}
+      - run: npm clean-install
+      - run: npm test
   verify:
     runs-on: ubuntu-latest
     steps:
@@ -28,6 +46,7 @@ jobs:
   release:
     needs:
       - verify
+      - verify-matrix
     permissions:
       contents: write
       id-token: write
