--- a/package.json
+++ b/package.json
@@ -33,7 +33,14 @@
     "lint:peer": "npm ls >/dev/null",
     "prepare": "husky install",
     "lint:publish": "publint --strict",
-    "lint:engines": "ls-engines"
+    "lint:engines": "ls-engines",
+    "test:integration": "run-s 'test:integration:base -- --profile noWip'",
+    "test:integration:base": "NODE_OPTIONS=--enable-source-maps DEBUG=any cucumber-js test/integration",
+    "test:integration:debug": "DEBUG=test run-s test:integration",
+    "test:integration:wip": "run-s 'test:integration:base -- --profile wip'",
+    "test:integration:wip:debug": "DEBUG=test run-s 'test:integration:wip'",
+    "test:integration:focus": "run-s 'test:integration:base -- --profile focus'",
+    "lint:gherkin": "gherkin-lint --config=.gherkin-lintrc.json"
   },
   "files": [
     "lib/"
@@ -49,15 +56,19 @@
     "deepmerge": "^4.3.1"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "9.4.0",
     "@form8ion/commitlint-config": "1.0.55",
     "@form8ion/eslint-config": "6.0.3",
+    "@form8ion/eslint-config-cucumber": "1.4.1",
     "@form8ion/remark-lint-preset": "6.0.0",
     "@rollup/plugin-node-resolve": "15.2.1",
     "@travi/any": "2.1.8",
     "ban-sensitive-files": "1.10.0",
     "c8": "8.0.1",
+    "chai": "4.3.8",
     "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
+    "gherkin-lint": "4.2.2",
     "husky": "8.0.3",
     "jest-when": "3.6.0",
     "lockfile-lint": "4.12.1",
