test(lint): added the fix script for eslint

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "test:integration:wip": "run-s 'test:integration:base -- --profile wip'",
     "test:integration:wip:debug": "DEBUG=test run-s 'test:integration:wip'",
     "test:integration:focus": "run-s 'test:integration:base -- --profile focus'",
-    "lint:gherkin": "gherkin-lint --config=.gherkin-lintrc.json"
+    "lint:gherkin": "gherkin-lint --config=.gherkin-lintrc.json",
+    "lint:js:fix": "run-s 'lint:js -- --fix'"
   },
   "files": [
     "lib/"
